work on to add task

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <input id="input" type="text" placeholder="Write Here"><span><button id="btn">Add</button></span>
         </div>
     </div>
+    
     <ul>
-        
+        <li>Hello <i id="#icon"class="fa-regular fa-circle-xmark"></i></li>
     </ul>
 <script src="script.js"></script>
 </body>
